--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="row text-center">
       <div class="col-md-12">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000"/>
-          <p class="pt-3 text-left text-muted">Hi, we're Dian & YT,Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+          <p class="pt-3 text-left text-muted">HELLO，各位親友大家好：</br>我們是定安與淯婷！是的，再一起一千八百多天我們終於迎來了彼此生命中最重要的時刻；我們在這裡非常榮幸邀請大家在4/17號參加我們的婚禮，在那天請大家拿出各位的熱情以及愉悅的心情一起共襄盛舉這場盛宴，並誠心的祝福我們：）</p>
         </div>
       </div>
     </div>
@@ -81,12 +81,12 @@
       </div>
       <div class="col-md-7 col-sm-12">
         <div class="my-3">
-          <div class="h4">西式證婚與雞尾酒吧</div>
+          <div class="h4">西式證婚</div>
           <ul>
             <li><i class="text-light fas fa-map-marker-alt"></i><span class="pl-2 text-light">戶外泳池畔</span></li>
             <li class="pt-2"><i class="text-light far fa-calendar-alt"></i><span class="pl-2 text-light">11:00 - 12:00</span></li>
           </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+          <p>我們會在陽光與海風的吹拂下，在嘉廬的戶外泳池畔進行盛大的西式證婚儀式，並在樂團的奏樂與您的祝福中完成我們生命中重要的里程盃；在這之後您還可以前往豪邸的客廳一邊欣賞我們甜蜜的點點滴滴，一邊享用我們準備的宴前小點與雞尾酒，您也可以在豪邸內走走逛逛、休息片刻等待午宴的到來。</p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
@@ -98,10 +98,10 @@
         <div class="my-3">
           <div class="h4">午宴</div>
           <ul>
-            <li><i class="text-light fas fa-map-marker-alt "></i><span class="pl-2 text-light">花園溫室</span></li>
+            <li><i class="text-light fas fa-map-marker-alt "></i><span class="pl-2 text-light">戶外花園溫室</span></li>
             <li class="pt-2"><i class="text-light far fa-calendar-alt "></i><span class="pl-2 text-light">12:00 - 15:00</span></li>
           </ul>
-          <p>Lorem ipsum dolor sit amet consectetur adipiscing, elit nulla enim arcu dictum lobortis, ac congue non hendrerit accumsan. Ut penatibus litora platea mi mus tempus eros proin, maecenas hac eget hendrerit inceptos per tempor sodales, id varius nulla commodo augue lectus pulvinar. Etiam suscipit leo sollicitudin vivamus tempor himenaeos vitae mattis dictum posuere, tincidunt aenean litora aptent facilisis eu est gravida.</p>
+          <p>經過了西式證婚，正午十二點我們邀請您來到嘉廬戶外花園溫室享用我們精心為各位準備的餐宴，並在正午12:30時，正式開始我們的進場儀式；當然在午宴當中也少不了一些小遊戲與您互動，並為遊戲勝利的嘉賓提供小禮品，誠摯希望您能一起踴躍參與我們的遊戲！在這裏也跟您說聲抱歉，因為疫情的關係，我們取消了逐桌敬酒的活動，如果真的想跟新郎新娘喝的，也都歡迎來主桌或Cue新郎新娘過去唷！</p>
         </div>
       </div>
       <div class="col-md-5 col-sm-12">
@@ -195,18 +195,29 @@
     </div>
   </div>
 </div>
-<div class="ww-section bg-light adress" id="map">
+<div class="ww-section bg-light adress traffic" id="map">
   <div class="container">
-    <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Venue</h2>
-  </div>
-  <!-- <h4>淡水嘉廬宅邸</h4> -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3610.815746867001!2d121.42760541541581!3d25.17569858390623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a58fddc78345%3A0x3e5f1ce27904fdee!2z5ZiJ5bus!5e0!3m2!1szh-TW!2stw!4v1645722119203!5m2!1szh-TW!2stw" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-  <div class="container">
-    <div class="row text-center">
-      <div class="col-md-12">
+    <h2 class="h1 text-center pb-3 ww-title mb-4 text-light" data-aos="zoom-in-down" data-aos-duration="1000">Wedding Venue</h2>
+    <div class="text-left row ">
+      <div class="col-md-6 text-light">
+          <ul>
+            <li><h4><i class="text-light fas fa-map-marker-alt"></i>淡水嘉廬豪邸</h4></li>
+            <li><span class="text-light">新北市淡水區淡江路3段32巷</span></li>
+          </ul>
+          <ul>
+            <li><h4><i class="text-light fas fa-subway"></i>交通資訊</h4></li>
+            <li><span class=" text-light">至淡水捷運站搭乘紅26、757、837、857、880號公車至滬尾砲台，步行4分鐘</span></li>
+          </ul>
+          <ul>
+            <li><h4><i class="text-light fas fa-parking"></i>停車資訊</h4></li>
+            <li><span class=" text-light">淡水禮萊國賓影城</span></li>
+            <li><span class=" text-light">新北市淡水區中正路一段2號</span></li>
+            <li><a href="https://goo.gl/maps/QGAZLGaqjU5pxXgo7"><div class="button">導航到停車場</div></a></li>
+          </ul>
+        </div>
+        <div class="mb-4 col-md-6">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3610.815746867001!2d121.42760541541581!3d25.17569858390623!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3442a58fddc78345%3A0x3e5f1ce27904fdee!2z5ZiJ5bus!5e0!3m2!1szh-TW!2stw!4v1645722119203!5m2!1szh-TW!2stw" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
-      <div class="col-md-6">
-        <h4>交通資訊</h4>
       </div>
     </div>
   </div>
