--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         }
       </style>
     </noscript>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v13.0" nonce="ryV4jzQV"></script>
   </head>
   <body id="top">
     <header></header>
@@ -222,8 +223,17 @@
     </div>
   </div>
 </div>
-
-    <footer></footer>
+<footer>
+  <div class="ww-section bg-light" id="comments">
+    <div class="container">
+      <h2 class="h1 text-center pb-3 ww-title mb-4 text-dark" data-aos="zoom-in-down" data-aos-duration="1000">Your Comments</h2>
+      <div class="text-left row ">
+        <div id="fb-root"></div>
+        <div class="fb-comments" data-href="https://dianlee.github.io/index.html" data-width="350px" data-numposts="10"></div>
+      </div>
+    </div>
+  </div>
+</footer>
     <script src="scripts/jquery.min.js?ver=1.1.0"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
     <script src="scripts/aos.js?ver=1.1.0"></script>
