--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
       </style>
     </noscript>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v13.0" nonce="ryV4jzQV"></script>
+    
   </head>
   <body id="top">
     <header></header>
@@ -228,8 +228,14 @@
     <div class="container">
       <h2 class="h1 text-center pb-3 ww-title mb-4 text-dark" data-aos="zoom-in-down" data-aos-duration="1000">Your Comments</h2>
       <div class="text-left row ">
+        <!-- Load Facebook SDK for JavaScript -->
         <div id="fb-root"></div>
-        <div class="fb-comments" data-href="https://dianlee.github.io/index.html" data-width="350px" data-numposts="10"></div>
+        <script async defer src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6"></script>
+        <!-- Your embedded comments code -->
+        <div class="fb-comment-embed"
+           data-href="https://www.facebook.com/yuting.liao1/posts/5642674809080373?comment_id=5642676709080183"
+           data-width="500">
+        </div>
       </div>
     </div>
   </div>
