--- a/index.html
+++ b/index.html
@@ -228,15 +228,10 @@
         <div class="container">
           <h2 class="h1 text-center pb-3 ww-title mb-4 text-dark" data-aos="zoom-in-down" data-aos-duration="1000">Your Comments</h2>
           <div class="text-left row ">
-            <!-- Load Facebook SDK for JavaScript -->
-            <div id="fb-root"></div>
-      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v13.0" nonce="ryV4jzQV"></script>
-      <!-- Your embedded comments code -->
-      <div class="fb-comments"
-         data-href="https://www.facebook.com/yuting.liao1/posts/5629800203701167?comment_id=5633295513351636"
-         data-width="500" data-numposts="10">
-      </div>
-            </div>
+           <div id="fb-root"></div>
+              <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v13.0" nonce="AxA5f5Yf"></script>
+              <div class="fb-page" data-href="https://www.facebook.com/groups/1168249287315322" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"></div>
+              <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fgroups%2F1168249287315322&tabs=timeline&width=0&height=0&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="0" height="0" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
           </div>
         </div>
       </div>
@@ -246,7 +241,7 @@
     <script src="scripts/aos.js?ver=1.1.0"></script>
     <script src="scripts/ekko-lightbox.min.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
-    
+
   </body>
 
 </html>
