--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </div>
       </div>
     </div>
-    <footer>
+    <!-- <footer>
       <div class="ww-section bg-light" id="comments">
         <div class="container">
           <h2 class="h1 text-center pb-3 ww-title mb-4 text-dark" data-aos="zoom-in-down" data-aos-duration="1000">Your Comments</h2>
@@ -235,7 +235,7 @@
           </div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="scripts/jquery.min.js?ver=1.1.0"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
     <script src="scripts/aos.js?ver=1.1.0"></script>
