--- a/index.html
+++ b/index.html
@@ -29,19 +29,47 @@
         }
       </style>
     </noscript>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
-  </head>
-  <body id="top">
     <script>
   window.fbAsyncInit = function() {
     FB.init({
-      appId            : '9019010ffc826ac8b65d721b1864168a',
-      autoLogAppEvents : true,
-      xfbml            : true,
-      version          : 'v13.0'
+      appId      : '{your-app-id}',
+      cookie     : true,
+      xfbml      : true,
+      version    : '{api-version}'
     });
+      
+    FB.AppEvents.logPageView();   
+      
   };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+});
+  {
+    status: 'connected',
+    authResponse: {
+        accessToken: '...',
+        expiresIn:'...',
+        signedRequest:'...',
+        userID:'...'
+    }
+    function checkLoginState() {
+  FB.getLoginStatus(function(response) {
+    statusChangeCallback(response);
+  });
+  }
+}
 </script>
+  </head>
+  <body id="top">
     <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/zh_TW/sdk.js#xfbml=1&version=v13.0&appId=915763949092558&autoLogAppEvents=1" nonce="3x4UnNKZ"></script>
     <div class="page-content">
@@ -234,15 +262,19 @@
         </div>
       </div>
     </div>
-    <footer>
+    <!-- <footer>
       <div class="ww-section bg-light" id="comments">
         <div class="container">
           <h2 class="h1 text-center pb-3 ww-title mb-4 text-dark" data-aos="zoom-in-down" data-aos-duration="1000">Your Comments</h2>
           <div class="text-left row ">
+            <fb:login-button 
+  scope="public_profile,email"
+  onlogin="checkLoginState();">
+</fb:login-button>
             <div class="fb-comments" data-href="https://dianlee.github.io/index.html" data-width="500" data-numposts="5"></div>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <script src="scripts/jquery.min.js?ver=1.1.0"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
     <script src="scripts/aos.js?ver=1.1.0"></script>
