--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
         }
       </style>
     </noscript>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-78518053-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('set', {'user_id': 'USER_ID'}); // 使用已登入的 user_id 設定 User ID。
+  gtag('config', 'UA-78518053-4');
+</script>
+
   </head>
   <body id="top">
     <header></header>
