--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
       </style>
     </noscript>
-   
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-97HTC6FP7L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -70,13 +70,19 @@
     </div>
   </nav>
 </div>
+
+
+
+
+
+
 <div class="ww-section" id="couple">
   <div class="container">
     <h2 class="h1 text-center pb-3 ww-title" data-aos="zoom-in-down" data-aos-duration="1000">Groom & Bride</h2>
     <div class="row text-center">
       <div class="col-md-12">
         <div class="mt-3"><img class="img-fluid" src="images/groom.jpg" alt="Groom" data-aos="flip-left" data-aos-duration="1000" width="100%" />
-          <p class="pt-3 text-left text-muted">HELLO，各位親友大家好：</br>我們是定安與淯婷！是的，再一起一千八百多天我們終於迎來了彼此生命中最重要的時刻；我們在這裡非常榮幸邀請大家在4/17號參加我們的婚禮，在那天請大家拿出各位的熱情以及愉悅的心情一起共襄盛舉這場盛宴，並誠心的祝福我們：）</p>
+          <p class="pt-3 text-left text-muted">HELLO，各位親友大家好：</br>我們是定安與淯婷！是的，在一起一千八百多天我們終於迎來了彼此生命中最重要的時刻；我們在這裡非常榮幸邀請大家在4/17號參加我們的婚禮，在那天請大家拿出各位的熱情以及愉悅的心情一起共襄盛舉這場盛宴，並誠心的祝福我們：）</p>
         </div>
       </div>
     </div>
@@ -235,10 +241,15 @@
 
     <footer></footer>
     <script src="scripts/jquery.min.js?ver=1.1.0"></script>
+    <script type="text/javascript" src="scripts/jquery-3.3.1.min.js"></script>
     <script src="scripts/bootstrap.bundle.min.js?ver=1.1.0"></script>
     <script src="scripts/aos.js?ver=1.1.0"></script>
     <script src="scripts/ekko-lightbox.min.js?ver=1.1.0"></script>
     <script src="scripts/main.js?ver=1.1.0"></script>
+    
+    <script type="text/javascript" src="scripts/owl.carousel.js"></script>
+    <script type="text/javascript" src="scripts/custom.js"></script>
+
   </body>
 
 </html>
