--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <div class="col-md-6 text-light">
           <ul>
             <li><h4><i class="text-light fas fa-map-marker-alt"></i>淡水嘉廬豪邸</h4></li>
-            <li><span class="text-light">新北市淡水區淡江路3段32巷</span></li>
+            <li><span class="text-light">新北市淡水區中正路382號</span></li>
           </ul>
           <ul>
             <li><h4><i class="text-light fas fa-subway"></i>交通資訊</h4></li>
