--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#couple">COUPLE</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#events">EVENTS</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#gallery">GALLERY</a></li>
-          <li class="nav-item"><a class="nav-link smooth-scroll" href="#map">ADRESS</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#map">ADDRESS</a></li>
         </ul>
       </div>
     </div>
